--- a/app/templates/new_customer.html
+++ b/app/templates/new_customer.html
@@ -431,7 +431,7 @@
                           >Customer Email Address</label
                         >
                         <input
-                          type="text"
+                          type="email"
                           class="form-control"
                           name="customer_email"
                           placeholder="Enter Customer Email Address"
