--- a/app/templates/new_engineer.html
+++ b/app/templates/new_engineer.html
@@ -384,6 +384,7 @@
                           name="engineer_first_name"
                           class="form-control"
                           placeholder="Enter Engineer First Name"
+                          required
                         />
                       </div>
                     </div>
@@ -395,6 +396,7 @@
                           name="engineer_last_name"
                           class="form-control"
                           placeholder="Enter Engineer Last Name"
+                          required
                         />
                       </div>
                     </div>
@@ -406,10 +408,11 @@
                           >Engineer Email Address</label
                         >
                         <input
-                          type="text"
+                          type="email"
                           name="engineer_email"
                           class="form-control"
                           placeholder="Enter Email Address"
+                          required
                         />
                       </div>
                     </div>
@@ -423,6 +426,7 @@
                           name="engineer_address"
                           class="form-control"
                           placeholder="Enter Engineer Physical Address"
+                          required
                         />
                       </div>
                     </div>
@@ -436,6 +440,7 @@
                           name="engineer_phone"
                           class="form-control"
                           placeholder="Enter Engineer Phone"
+                          required
                         />
                       </div>
                     </div>
@@ -451,6 +456,7 @@
                                 <input
                                   type="checkbox"
                                   name="engineer_field_ATM"
+                                  data-parsley-mincheck="1"
                                 />
                                 ATM
                               </label>
