--- a/app/templates/new_engineer.html
+++ b/app/templates/new_engineer.html
@@ -311,7 +311,7 @@
             </div>
             <div class="box-body">
               {% include '_messages.html' %}
-              <form action="/add_engineer" method="POST" enctype="multipart/form-data" data-parsley-validate>
+              <form action="/add_engineer" method="POST" data-parsley-validate>
                 <div class="box-body">
                   <div class="row">
                     <div class="col-md-6">
