--- a/app/templates/edit_ticket.html
+++ b/app/templates/edit_ticket.html
@@ -231,13 +231,18 @@
               </span>
             </a>
           </li>
-          <li>
-            <a href="pages/mailbox/mailbox.html">
-              <i class="fa fa-envelope"></i> <span>Mailbox</span>
+          <li style="height:80px">
+            <a>
               <span class="pull-right-container">
-                <small class="label pull-right bg-yellow">12</small>
-                <small class="label pull-right bg-green">16</small>
-                <small class="label pull-right bg-red">5</small>
+                <small style="width:60px" class="label pull-right bg-yellow">
+                  <h1 id="s">12</h1>
+                </small>
+                <small style="width:60px" class="label pull-right bg-green">
+                  <h1 id="m">34</h1>
+                </small>
+                <small style="width:60px" class="label pull-right bg-red">
+                  <h1 id="h">23</h1>
+                </small>
               </span>
             </a>
           </li>
@@ -482,7 +487,10 @@
                   <div class="col-md-4" style="padding-bottom: 20px">
                       <button type="submit" class="btn btn-lg btn-success btn-block">Submit Changes</button>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-2">
+                      <button type="cancel" class="btn btn-lg btn-danger btn-block" formaction="/delete_tickets/{{allTheTickets[0]}}" formnovalidate>Delete</button>
+                  </div>
+                  <div class="col-md-2">
                       <button type="cancel" class="btn btn-lg btn-default btn-block" formaction="/dashboard" formnovalidate>Cancel</button>
                   </div>
               </div>
@@ -522,6 +530,7 @@
 <script src="{{ url_for('static',filename='dist/js/adminlte.min.js') }}"></script>
 <!-- Parsely JS -->
 <script src="{{ url_for('static',filename='parsley/parsley.min.js') }}"></script>
+<script src="{{ url_for('static',filename='time/time.js') }}"></script>
 <script>
   $(document).ready(function () {
     $('.sidebar-menu').tree()
