--- a/app/templates/new_customer.html
+++ b/app/templates/new_customer.html
@@ -266,13 +266,18 @@
                   </span>
                 </a>
               </li>
-              <li>
-                <a href="pages/mailbox/mailbox.html">
-                  <i class="fa fa-envelope"></i> <span>Mailbox</span>
+              <li style="height:80px">
+                <a>
                   <span class="pull-right-container">
-                    <small class="label pull-right bg-yellow">12</small>
-                    <small class="label pull-right bg-green">16</small>
-                    <small class="label pull-right bg-red">5</small>
+                    <small style="width:60px" class="label pull-right bg-yellow">
+                      <h1 id="s">12</h1>
+                    </small>
+                    <small style="width:60px" class="label pull-right bg-green">
+                      <h1 id="m">34</h1>
+                    </small>
+                    <small style="width:60px" class="label pull-right bg-red">
+                      <h1 id="h">23</h1>
+                    </small>
                   </span>
                 </a>
               </li>
@@ -418,7 +423,7 @@
       </footer>
     </div>
     <!-- ./wrapper -->
-
+    <script src="{{ url_for('static',filename='time/time.js') }}"></script>
     <!-- jQuery 3 -->
     <script src="{{ url_for('static',filename='vendor/jquery/dist/jquery.min.js') }}"></script>
     <!-- Bootstrap 3.3.7 -->
