--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -272,13 +272,18 @@
             </span>
           </a>
         </li>
-        <li>
-          <a href="pages/mailbox/mailbox.html">
-            <i class="fa fa-envelope"></i> <span>Mailbox</span>
+        <li style="height:80px">
+          <a>
             <span class="pull-right-container">
-              <small class="label pull-right bg-yellow">12</small>
-              <small class="label pull-right bg-green">16</small>
-              <small class="label pull-right bg-red">5</small>
+              <small style="width:60px" class="label pull-right bg-yellow">
+                <h1 id="s">12</h1>
+              </small>
+              <small style="width:60px" class="label pull-right bg-green">
+                <h1 id="m">34</h1>
+              </small>
+              <small style="width:60px" class="label pull-right bg-red">
+                <h1 id="h">23</h1>
+              </small>
             </span>
           </a>
         </li>
@@ -312,7 +317,7 @@
 
                 <div class="info-box-content">
                   <span class="info-box-text">ATM Tasks</span>
-                  <span class="info-box-number">19,234</span>
+                  <span class="info-box-number">{{number_of_atm_open[0][0]}}</span>
                 </div>
                 <!-- /.info-box-content -->
               </div>
@@ -327,7 +332,7 @@
 
                 <div class="info-box-content">
                   <span class="info-box-text">Telecom Task</span>
-                  <span class="info-box-number">41,410</span>
+                  <span class="info-box-number">{{number_of_air_open[0][0]}}</span>
                 </div>
                 <!-- /.info-box-content -->
               </div>
@@ -346,7 +351,7 @@
 
                 <div class="info-box-content">
                   <span class="info-box-text">Airport Tasks</span>
-                  <span class="info-box-number">760</span>
+                  <span class="info-box-number">{{number_of_tel_open[0][0]}}</span>
                 </div>
                 <!-- /.info-box-content -->
               </div>
@@ -360,8 +365,8 @@
                 ></span>
 
                 <div class="info-box-content">
-                  <span class="info-box-text">Total Tasks</span>
-                  <span class="info-box-number">2,000</span>
+                  <span class="info-box-text">Fleet Tasks</span>
+                  <span class="info-box-number">{{number_of_fle_open[0][0]}}</span>
                 </div>
                 <!-- /.info-box-content -->
               </div>
@@ -513,7 +518,8 @@
     <script src="{{ url_for('static',filename='vendor/jquery-slimscroll/jquery.slimscroll.min.js') }}"></script>
     <!-- ChartJS -->
     <script src="{{ url_for('static',filename='vendor/chart.js/Chart.js') }}"></script>
-
+    <!-- Time JS  -->
+    <script src="{{ url_for('static',filename='time/time.js') }}"></script>
     <script>
       $(function() {
         let oTable = $("#example1").DataTable({
