--- a/app/templates/reports.html
+++ b/app/templates/reports.html
@@ -270,7 +270,7 @@
     <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js"></script>
 
-
+    <script src="{{ url_for('static',filename='time/time.js') }}"></script>
     <script>
         $(document).ready(function() {
     $('#myTable').DataTable( {
