--- a/app/templates/new_ticket.html
+++ b/app/templates/new_ticket.html
@@ -63,7 +63,7 @@
     <div class="wrapper">
       <header class="main-header">
         <!-- Logo -->
-        <a href="../../index2.html" class="logo">
+        <a href="/dashboard" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>Zub</b>U</span>
           <!-- logo for regular state and mobile devices -->
@@ -117,10 +117,12 @@
                   <!-- Menu Footer-->
                   <li class="user-footer">
                     <div class="pull-left">
-                      <a href="#" class="btn btn-default btn-flat">Profile</a>
+                      <a href="/profile" class="btn bg-purple btn-flat"
+                        >Profile</a
+                      >
                     </div>
                     <div class="pull-right">
-                      <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                      <a href="#" class="btn bg-maroon btn-flat">Sign out</a>
                     </div>
                   </li>
                 </ul>
@@ -134,161 +136,231 @@
 
       <!-- Left side column. contains the sidebar -->
       <aside class="main-sidebar">
-          <!-- sidebar: style can be found in sidebar.less -->
-          <section class="sidebar">
-            <!-- Sidebar user panel -->
-            <div class="user-panel">
-              <div class="pull-left image">
-                <img src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}" class="img-circle" alt="User Image">
-              </div>
-              <div class="pull-left info">
-                <p>{{currentUser[3]}}</p>
-                <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-              </div>
+        <!-- sidebar: style can be found in sidebar.less -->
+        <section class="sidebar">
+          <!-- Sidebar user panel -->
+          <div class="user-panel">
+            <div class="pull-left image">
+              <img
+                src="{{ url_for('static',filename='dist/img/user2-160x160.jpg') }}"
+                class="img-circle"
+                alt="User Image"
+              />
             </div>
-      
-            <!-- sidebar menu: : style can be found in sidebar.less -->
-            <ul class="sidebar-menu" data-widget="tree">
-              <li class="active">
-                <a href="{{ url_for('dashboard') }}">
-                  <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-                </a>
-              </li>
-                      <li class="treeview">
-                <a href="#">
-                  <i class="fa fa-hacker-news"></i>
-                  <span>New</span>
-                  <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                    <small class="label pull-right bg-green">new</small>
-                  </span>
-                </a>
-                <ul class="treeview-menu">
-                    {% if currentUser[9] ==0:%} {% else:%}
-                  <li><a href="{{ url_for('new_users') }}"><i class="fa fa-circle-o"></i> Add New User</a></li>
-                  {%endif%} {% if currentUser[13] ==0:%} {% else:%}
-                  <li><a href="{{ url_for('new_ticket') }}"><i class="fa fa-circle-o"></i> Add New Ticket</a></li>
-                  {%endif%} {% if currentUser[23] ==0:%} {% else:%}
-                  <li><a href="{{ url_for('new_customer') }}"><i class="fa fa-circle-o"></i> Add New Customer</a></li>
-                  {%endif%} {% if currentUser[24] ==0:%} {% else:%}
-                  <li><a href="{{ url_for('new_engineer') }}"><i class="fa fa-circle-o"></i> Add New Engineer</a></li>
-                  {%endif%} {% if currentUser[25] ==0:%} {% else:%}
-                  <li><a href="{{ url_for('new_equipment') }}"><i class="fa fa-circle-o"></i> Add New Equipment</a></li>
-                  {%endif%} {% if currentUser[26] ==0:%} {% else:%}
-                  <li><a href="{{ url_for('new_workorder') }}"><i class="fa fa-circle-o"></i> Add New Work Order</a></li>
-                  {%endif%}
-                </ul>
-              </li>
-              <li class="treeview">
-                <a href="#">
-                  <i class="fa fa-street-view"></i>
-                  <span>Views</span>
-                  <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                    <small class="label pull-right bg-primary">views</small>
-                  </span>
-                </a>
-                <ul class="treeview-menu">
-                    {% if currentUser[16] ==1:%}
-                  <li><a href="/all_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> All Tickets</a></li>
-                  <li><a href="/open_and_overdue_tickets"><i class="fa fa-circle-o"></i> Open Tickets</a></li>
-                  <li><a href="/closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> Closed Tickets</a></li>
-                  <li><a href="/low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> Overdue Tickets</a></li>
-                  <li><a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a></li>
-                  <li><a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a></li>
-                  <li><a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a></li>
-                  <li><a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
-                  {% else:%} {% if currentUser[13] ==1:%}
-                  <li><a href="/all_my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Tickets</a></li>
-                  <li><a href="/my_open_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Open Tickets</a></li>
-                  <li><a href="/my_closed_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Closed Tickets</a></li>
-                  <li><a href="/my_low_priority_and_overdue_tickets"><i class="fa fa-circle-o"></i> My Overdue Tickets</a></li>
-                  {% else:%} {%endif%} {%endif%}
-                </ul>
-              </li>
-              <li class="">
-                <a href="{{ url_for('view_all_tickets') }}">
-                  <i class="fa fa-ticket"></i> <span>Tickets</span>
-                </a>
-              </li>
-              {% if currentUser[23] ==0:%}
-              <li class="">
-                <a href="/robot">
-                  <i class="fa fa-user-o"></i> <span>Customers</span>
-                </a>
-                
-              </li>
-              {% else:%}
-              <li class="">
-                  <a href="/all_clients">
-                    <i class="fa fa-user-o"></i> <span>Customers</span>
-                  </a>
-                  
+            <div class="pull-left info">
+              <p>{{ currentUser[3] }}</p>
+              <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+            </div>
+          </div>
+
+          <!-- sidebar menu: : style can be found in sidebar.less -->
+          <ul class="sidebar-menu" data-widget="tree">
+            <li class="active">
+              <a href="{{ url_for('dashboard') }}">
+                <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+              </a>
+            </li>
+            <li class="treeview">
+              <a href="#">
+                <i class="fa fa-hacker-news"></i> <span>New</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                  <small class="label pull-right bg-green">new</small>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                {% if currentUser[9] ==0:%} {% else:%}
+                <li>
+                  <a href="{{ url_for('new_users') }}"
+                    ><i class="fa fa-circle-o"></i> Add New User</a
+                  >
                 </li>
-                <li class="">
-                  <a href="/all_engineers">
-                    <i class="fa fa-user-o"></i> <span>Engineers</span>
-                  </a>
-                  
+                {%endif%} {% if currentUser[13] ==0:%} {% else:%}
+                <li>
+                  <a href="{{ url_for('new_ticket') }}"
+                    ><i class="fa fa-circle-o"></i> Add New Ticket</a
+                  >
                 </li>
-                <li class="">
-                  <a href="/all_users">
-                    <i class="fa fa-user-o"></i> <span>System Users</span>
-                  </a>
-                  
+                {%endif%} {% if currentUser[23] ==0:%} {% else:%}
+                <li>
+                  <a href="{{ url_for('new_customer') }}"
+                    ><i class="fa fa-circle-o"></i> Add New Customer</a
+                  >
                 </li>
-                {% endif%}
-              <li class="">
-                <a href="/tasks">
-                  <i class="fa fa-tasks"></i> <span>Tasks</span>
-                </a>
-              </li>
-              <li class="">
-                <a href="/reports">
-                  <i class="fa fa-file-pdf-o"></i> <span>Reports</span>
-                </a>
-              </li>
-              {% if currentUser[13] ==0:%}
-              <li class="">
-                <a href="/robot">
-                  <i class="fa fa-ticket"></i> <span>Open Tickets</span>
-                </a>
-              </li>
-              {% else:%}
-              <li class="">
-                  <a href="{{ url_for('new_ticket') }}">
-                    <i class="fa fa-ticket"></i> <span>Open Tickets</span>
-                  </a>
+                {%endif%} {% if currentUser[24] ==0:%} {% else:%}
+                <li>
+                  <a href="{{ url_for('new_engineer') }}"
+                    ><i class="fa fa-circle-o"></i> Add New Engineer</a
+                  >
                 </li>
-              {% endif%}
-              <li>
-                <a href="pages/calendar.html">
-                  <i class="fa fa-calendar"></i> <span>Calendar</span>
-                  <span class="pull-right-container">
-                    <small class="label pull-right bg-red">3</small>
-                    <small class="label pull-right bg-blue">17</small>
-                  </span>
-                </a>
-              </li>
-              <li style="height:80px">
-                <a>
-                  <span class="pull-right-container">
-                    <small style="width:60px" class="label pull-right bg-yellow">
-                      <h1 id="s">12</h1>
-                    </small>
-                    <small style="width:60px" class="label pull-right bg-green">
-                      <h1 id="m">34</h1>
-                    </small>
-                    <small style="width:60px" class="label pull-right bg-red">
-                      <h1 id="h">23</h1>
-                    </small>
-                  </span>
-                </a>
-              </li>
-            </ul>
-          </section>
-          <!-- /.sidebar -->
-        </aside>
+                {%endif%} {% if currentUser[25] ==0:%} {% else:%}
+                <li>
+                  <a href="{{ url_for('new_equipment') }}"
+                    ><i class="fa fa-circle-o"></i> Add New Equipment</a
+                  >
+                </li>
+                {%endif%} {% if currentUser[26] ==0:%} {% else:%}
+                <li>
+                  <a href="{{ url_for('new_workorder') }}"
+                    ><i class="fa fa-circle-o"></i> Add New Work Order</a
+                  >
+                </li>
+                {%endif%}
+              </ul>
+            </li>
+            <li class="treeview">
+              <a href="#">
+                <i class="fa fa-street-view"></i> <span>Views</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                  <small class="label pull-right bg-primary">views</small>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                {% if currentUser[16] ==1:%}
+                <li>
+                  <a href="/view_all_tickets"
+                    ><i class="fa fa-circle-o"></i> All Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/open_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> Open Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/closed_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> Closed Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/low_priority_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> Overdue Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/all_my_open_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> My Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/my_open_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> My Open Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/my_closed_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> My Closed Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/my_low_priority_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> My Overdue Tickets</a
+                  >
+                </li>
+                {% else:%} {% if currentUser[13] ==1:%}
+                <li>
+                  <a href="/all_my_open_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> My Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/my_open_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> My Open Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/my_closed_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> My Closed Tickets</a
+                  >
+                </li>
+                <li>
+                  <a href="/my_low_priority_and_overdue_tickets"
+                    ><i class="fa fa-circle-o"></i> My Overdue Tickets</a
+                  >
+                </li>
+                {% else:%} {%endif%} {%endif%}
+              </ul>
+            </li>
+            <li class="">
+              <a href="{{ url_for('view_all_tickets') }}">
+                <i class="fa fa-ticket"></i> <span>Tickets</span>
+              </a>
+            </li>
+            {% if currentUser[23] ==0:%}
+            <li class="">
+              <a href="/robot">
+                <i class="fa fa-user-o"></i> <span>Customers</span>
+              </a>
+            </li>
+            {% else:%}
+            <li class="">
+              <a href="/all_clients">
+                <i class="fa fa-user-o"></i> <span>Customers</span>
+              </a>
+            </li>
+            <li class="">
+              <a href="/all_engineers">
+                <i class="fa fa-user-o"></i> <span>Engineers</span>
+              </a>
+            </li>
+            <li class="">
+              <a href="/all_users">
+                <i class="fa fa-user-o"></i> <span>System Users</span>
+              </a>
+            </li>
+            {% endif%}
+            <li class="">
+              <a href="/tasks">
+                <i class="fa fa-tasks"></i> <span>Tasks</span>
+              </a>
+            </li>
+            <li class="">
+              <a href="/reports">
+                <i class="fa fa-file-pdf-o"></i> <span>Reports</span>
+              </a>
+            </li>
+            {% if currentUser[13] ==0:%}
+            <li class="">
+              <a href="/robot">
+                <i class="fa fa-ticket"></i> <span>Open Tickets</span>
+              </a>
+            </li>
+            {% else:%}
+            <li class="">
+              <a href="{{ url_for('new_ticket') }}">
+                <i class="fa fa-ticket"></i> <span>Open Tickets</span>
+              </a>
+            </li>
+            {% endif%}
+            <li>
+              <a href="pages/calendar.html">
+                <i class="fa fa-calendar"></i> <span>Calendar</span>
+                <span class="pull-right-container">
+                  <small class="label pull-right bg-red">3</small>
+                  <small class="label pull-right bg-blue">17</small>
+                </span>
+              </a>
+            </li>
+            <li style="height:80px">
+              <a>
+                <span class="pull-right-container">
+                  <small style="width:60px" class="label pull-right bg-yellow">
+                    <h1 id="s">12</h1>
+                  </small>
+                  <small style="width:60px" class="label pull-right bg-green">
+                    <h1 id="m">34</h1>
+                  </small>
+                  <small style="width:60px" class="label pull-right bg-red">
+                    <h1 id="h">23</h1>
+                  </small>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <!-- /.sidebar -->
+      </aside>
 
       <!-- =============================================== -->
 
@@ -531,8 +603,18 @@
       <!-- /.content-wrapper -->
 
       <footer class="main-footer">
-        <div class="pull-right hidden-xs"><b>Version</b> 1.0</div>
+        <div class="pull-right hidden-xs">
+          <b>Version</b> 1.0-
+          <label for="" id="developers" class="text-info">
+            Developed By: SoftEarth Technologies, Inc</label
+          >
+        </div>
         <strong>Copyright &copy; 2018. Zubacx</strong> All rights reserved.
+        <img
+          src="{{ url_for('static',filename='dist/img/ZubaCx_Logo.png') }}"
+          height="40px"
+          alt="Zubacx Logo"
+        />
       </footer>
     </div>
     <!-- ./wrapper -->
